<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.macbitsgoa.ard.fragments.posts.HomeAnnFragment">

    <TextView
        android:id="@+id/textView_home_ann_fragment_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_home_ann_fragment_counter"
        android:layout_marginTop="@dimen/marginTop_home_ann_fragment_counter"
        android:textSize="@dimen/textSize_home_ann_fragment_counter"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_home_ann_fragment_message"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_home_ann_fragment_counter">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_home_ann_fragment_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_home_ann_fragment_message" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
